[gd_scene load_steps=3 format=3 uid="uid://ddaiqwdtdf0sm"]

[ext_resource type="Script" path="res://ui/MainMenu/main_menu.gd" id="1_1io0r"]
[ext_resource type="AudioStream" uid="uid://ctf1j24tybtks" path="res://audio/Main.wav" id="2_ao5b8"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_1io0r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 99

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -158.5
offset_right = 245.0
offset_bottom = 158.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
text = "Continue"

[node name="NewGameButton" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
text = "New game"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
text = "Quit"

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ao5b8")
bus = &"Music"

[connection signal="pressed" from="CanvasLayer/Buttons/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
